# ac

./: .gitignore  README.md  build.gradle  gradlew  settings.gradle
docs/: ARCHITECTURE.md  PERFORMANCE.md
native/: CMakeLists.txt
native/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
native/include/: macac_native.h
native/src/: combat.cpp  jni_bridge.cpp  network.cpp  ringbuffer.cpp  stats.cpp  timing.cpp
src/main/java/com/macmoment/macac/: MacACPlugin.java
src/main/java/com/macmoment/macac/actions/: AlertPublisher.java  PunishmentHandler.java  WhitelistManager.java
src/main/java/com/macmoment/macac/config/: EngineConfig.java
src/main/java/com/macmoment/macac/core/: Engine.java
src/main/java/com/macmoment/macac/ingest/: PacketIngestor.java
src/main/java/com/macmoment/macac/model/: CheckResult.java  CombatCheckResult.java  CombatContext.java  CombatInput.java  Decision.java  Features.java  PlayerContext.java  TelemetryInput.java  Violation.java
src/main/java/com/macmoment/macac/network/: AnalyticsClient.java
src/main/java/com/macmoment/macac/pipeline/: Aggregator.java  Check.java  CheckRegistry.java  FeatureExtractor.java  HistoryStore.java  MitigationPolicy.java
src/main/java/org/bukkit/: Bukkit.java  ChatColor.java  GameMode.java  Location.java  Server.java  World.java
src/main/java/org/bukkit/command/: Command.java  CommandSender.java
src/main/java/org/bukkit/entity/: Player.java
src/main/java/org/bukkit/event/: EventHandler.java  EventPriority.java  HandlerList.java  Listener.java
src/main/java/org/bukkit/plugin/: Plugin.java  PluginManager.java
src/main/java/org/bukkit/scheduler/: BukkitScheduler.java  BukkitTask.java
src/main/resources/: config.yml  plugin.yml
src/test/java/com/macmoment/macac/: ConfidenceBoundingTest.java  RingBufferTest.java  StatsTest.java
(+19 files in other folders)
